--- a/kube.yaml
+++ b/kube.yaml
@@ -4,7 +4,7 @@ metadata:
   name: chat
   namespace: default
 spec:
-  replicas: 7
+  replicas: 9
   selector:
     matchLabels:
       app: chat
@@ -39,9 +39,21 @@ spec:
           "-S","mix",
           "phx.server"
         ]
-
 ---
+kind: Service
+apiVersion: v1
 
+metadata:
+  name: chat-nodes
+  namespace: default
+spec:
+  clusterIP: None
+  selector:
+    app: chat
+  ports:
+    - name: epmd
+      port: 4369
+---
 apiVersion: v1
 kind: Service
 metadata:
